--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
     "nodemon": "^2.0.14",
