--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.11",
+    "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
     "passport": "^0.5.0",
     "passport-github2": "^0.1.12",
@@ -39,19 +39,22 @@
     "@types/morgan": "^1.9.3",
     "@types/passport": "^1.0.7",
     "@types/passport-github2": "^1.2.5",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint": "^8.4.0",
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-promise": "^5.2.0",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
+    "lint-staged": "^12.1.2",
     "nodemon": "^2.0.14",
-    "prettier": "^2.4.1"
+    "prettier": "^2.5.1"
   },
   "lint-staged": {
-    "*.js": "npm run lint",
+    "*.js": [
+      "npm run lint",
+      "eslint --cache --fix"
+    ],
     "*.{js,css,md}": "prettier --write"
   }
 }
