--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "env": {
     "browser": false,
     "node": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "extends": [
     "plugin:promise/recommended",
@@ -10,7 +11,15 @@
     "airbnb/base",
     "prettier"
   ],
+  "plugins": ["jest"],
   "rules": {
     "no-underscore-dangle": "off"
-  }
+  },
+  "overrides": [{
+    "files": "**/tests/**",
+    "rules": {
+        "node/no-unpublished-require": 0,
+        "node/no-missing-require": 0
+    }
+  }]
 }
