--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
     "passport": "^0.5.0",
-    "passport-github2": "^0.1.12",
-    "sharp": "^0.29.3"
+    "passport-github2": "^0.1.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
