--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "tdd": "jest --watchAll",
     "check": "npm run lint && npm run test",
-    "updateCommentsCounter": "node src/scripts/updateCommentsCounter.js"
+    "ucc": "node src/scripts/updateCommentsCounter.js"
   },
   "repository": {
     "type": "git",
