--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "",
   "main": "src/index.js",
+  "engines": {
+    "node": "^14.0.0"
+  },
   "scripts": {
     "start": "node src/server",
     "dev": "nodemon ./src/server -q",
